--- a/src/styles.css
+++ b/src/styles.css
@@ -1,3 +1,100 @@
 body {
     background: linear-gradient(to top, #fff1eb 0%, #ace0f9 100%);
+
+    .tangerine-regular {
+        font-family: "Tangerine", cursive;
+        font-weight: 400;
+        font-style: normal;
+      }
+      
+      .tangerine-bold {
+        font-family: "Tangerine", cursive;
+        font-weight: 700;
+        font-style: normal;
+      }
+      
+}
+
+a {
+    color: #00204a;
+}
+
+.weather-app {
+    background: white;
+    max-width: 600px;
+    margin: 60px auto;
+    padding: 30px;
+    border-radius: 10px;
+    box-shadow: 0 30ox 50px #00204a;
+}
+
+header{
+    border-bottom: 1px solid white;
+    padding-bottom: 30px;
+}
+
+.search-input {
+    background-color: white ;
+    border: none;
+    color: #00204a;
+    font-size: 16px;
+    padding: 20px;
+    width: 75%;
+    border-radius: 6px;
+}
+.search-button {
+    margin-left: 5px;
+    font-size: 16px;
+    background-color: #fdb44b;
+    color: #00204a;
+    border: none;
+    padding: 20px;
+    line-height: 1;
+    border-radius: 5px;
+}
+
+main {
+    padding: 30px 0;
+}
+
+.current-weather {
+    display: flex;
+    justify-content: space-between;
+}
+
+.current-city {
+    font-size: 38px;
+    font-weight: 900;
+    margin: 0;
+}
+
+.current-details {
+    color: #00204a;
+    font-size: 16px;
+    font-weight: 400;
+    line-height: 24px;
+}
+
+.current-details-strong {
+    color: aqua;
+}
+
+.current-temperature-icon {
+    position: relative;
+    top: -8px;
+    font-size: 40px;
+    margin-right: 10px;
+}
+
+.current-temperature-value {
+    font-size: 80px;
+    font-weight: bold;
+}
+
+footer {
+    border-top: 1px solid white;
+    text-align: center;
+    padding-top: 15px;
+
+    color: #00204a;
 }
