edit backgound color

--- a/src/styles.css
+++ b/src/styles.css
@@ -1,7 +1,7 @@
 body {
     background: linear-gradient(to top, #fff1eb 0%, #ace0f9 100%);
         font-family: "Tangerine", cursive;
-        background-position: inherit;
+        background-position: center;
 
 }
 
