--- a/src/styles.css
+++ b/src/styles.css
@@ -6,15 +6,15 @@ body {
 }
 
 a {
-    color: #00204a;
+    color: #dca10c;
 }
 
 .weather-app {
-    background: white;
-    max-width: 600px;
+    background: rgb(8, 133, 149);
+    max-width: 200px;
     margin: 60px auto;
     padding: 30px;
-    border-radius: 10px;
+    border-radius: 30px;
     box-shadow: 0 30ox 50px #00204a;
 }
 
