--- a/src/styles.css
+++ b/src/styles.css
@@ -12,12 +12,13 @@ a {
 .weather-app {
     background: rgb(8, 133, 149);
     max-width: 200px;
+    max-inline-size: 200px;
     margin: 60px auto;
     padding: 30px;
     border-radius: 30px;
     box-shadow: 0 30ox 50px #00204a;
 }
-
+ß
 header{
     border-bottom: 1px solid white;
     padding-bottom: 30px;
