--- a/src/styles.css
+++ b/src/styles.css
@@ -13,7 +13,7 @@ a {
     background: rgb(8, 133, 149);
     max-width: 200px;
     max-inline-size: 200px;
-    margin: 60px auto;
+    margin: 0 auto;
     padding: 30px;
     border-radius: 30px;
     box-shadow: 0 30ox 50px #00204a;
