--- a/src/styles.css
+++ b/src/styles.css
@@ -11,8 +11,7 @@ a {
 
 .weather-app {
     background: rgb(8, 133, 149);
-    max-inline-size: 200px;
-    margin: 0 auto;
+    margin: 80px auto;
     padding: 30px;
     border-radius: 30px;
     box-shadow: 0 30ox 50px #00204a;
