--- a/src/styles.css
+++ b/src/styles.css
@@ -18,8 +18,8 @@ a {
 }
 ß
 header{
-    border-bottom: 1px solid white;
-    padding-bottom: 30px;
+    border-block-end: 1px solid white;
+    padding-block-end: 30px;
 }
 
 .search-input {
@@ -28,11 +28,11 @@ header{
     color: #00204a;
     font-size: 16px;
     padding: 20px;
-    width: 75%;
+    inline-size: 75%;
     border-radius: 6px;
 }
 .search-button {
-    margin-left: 5px;
+    margin-inline-start: 5px;
     font-size: 16px;
     background-color: #fdb44b;
     color: #00204a;
@@ -70,9 +70,9 @@ main {
 
 .current-temperature-icon {
     position: relative;
-    top: -8px;
+    inset-block-start: -8px;
     font-size: 200px;
-    margin-right: 10px;
+    margin-inline-end: 10px;
 }
 
 .current-temperature-value {
@@ -81,9 +81,9 @@ main {
 }
 
 footer {
-    border-top: 1px solid white;
+    border-block-start: 1px solid white;
     text-align: center;
-    padding-top: 15px;
+    padding-block-start: 15px;
 
     color: #00204a;
 }
