--- a/src/styles.css
+++ b/src/styles.css
@@ -1,5 +1,5 @@
 body {
-    background: linear-gradient(to top, #e14fad 0%, #f9d423 100%);
+    background: radial-gradient(circle at 10% 20%, rgba(216, 241, 230, 0.46) 0.1%, rgba(233, 226, 226, 0.28) 90.1%);
     font-family: "Quicksand", sans-serif;
     font-optical-sizing: auto;
     font-weight: 400;
