--- a/src/styles.css
+++ b/src/styles.css
@@ -1,5 +1,5 @@
 body {
-    background: radial-gradient(circle at 10% 20%, rgba(216, 241, 230, 0.46) 0.1%, rgba(233, 226, 226, 0.28) 90.1%);
+    
     font-family: "Quicksand", sans-serif;
     font-optical-sizing: auto;
     font-weight: 400;
@@ -11,7 +11,7 @@ a {
     color: #dca10c;
 }
 
-.weather-app {
+#weather-app {
     background: rgb(8, 133, 149);
     margin: 80px auto;
     padding: 30px;
