--- a/src/styles.css
+++ b/src/styles.css
@@ -1,5 +1,5 @@
 body {
-    background: radial-gradient(circle at 10% 20%, rgba(216, 241, 230, 0.46) 0.1%, rgba(233, 226, 226, 0.28) 90.1%);
+    background: #1a8b9d;
     font-family: "Quicksand", sans-serif;
     font-optical-sizing: auto;
     font-weight: 400;
@@ -8,25 +8,25 @@ body {
 }
 
 a {
-    color: #dca10c;
+    color: #b2d430;
 }
 
 #weather-app {
-    background: rgb(8, 133, 149);
-    margin: 80px auto;
+    background: #fff5f5;
+    margin: 60px auto;
     padding: 30px;
-    border-radius: 30px;
-    box-shadow: 0 30ox 50px #00204a;
+    border-radius: solid 30px;
+    box-shadow: 0 30ox 50px #0000;
 }
 header{
-    border-block-end: 1px solid white;
+    border-block-end: 1px solid #fff5f5;
     padding-block-end: 30px;
 }
 
 .search-input {
-    background-color: rgb(248, 157, 61) ;
+    background-color: #b2d430 ;
     border: none;
-    color: #00204a;
+    color: #0000;
     font-size: 16px;
     padding: 20px;
     inline-size: 75%;
@@ -35,8 +35,8 @@ header{
 .search-button {
     margin-inline-start: 5px;
     font-size: 16px;
-    background-color: #fdb44b;
-    color: #00204a;
+    background-color: #49b62c;
+    color: #0000;
     border: none;
     padding: 20px;
     line-height: 1;
@@ -54,7 +54,7 @@ main {
 
 .current-city {
     font-size: 60px;
-    font-weight: 900;
+    font-weight: 600;
     margin: 0;
 }
 
@@ -62,17 +62,17 @@ main {
     color: #00204a;
     font-size: 45px;
     font-weight: 400;
-    line-height: 24px;
+    line-height: 10px;
 }
 
 .current-details-strong {
-    color: aqua;
+    color: #b2d430;
 }
 
 .current-temperature-icon {
     position: relative;
-    inset-block-start: -8px;
-    font-size: 200px;
+    inset-block-start: 10px;
+    font-size:100px;
     margin-inline-end: 10px;
 }
 
@@ -82,7 +82,7 @@ main {
 }
 
 footer {
-    border-block-start: 1px solid white;
+    border-block-start: 1px solid #fff5f5;
     text-align: center;
     padding-block-start: 15px;
 
