--- a/src/styles.css
+++ b/src/styles.css
@@ -1,39 +1,43 @@
 body {
-    background: #1a8b9d;
+    background: #f9f7fe;
+    font-family: 'Courier New', Courier, monospace;
   
 
 }
 
 a {
-    color: #b2d430;
+    color: #885df1;
 }
 
 .weather-app {
-    background: #fff5f5;
+    background: white;
+    max-width: 600px;
     margin: 60px auto;
     padding: 30px;
-    border-radius: solid 30px;
-    box-shadow: 0 30ox 50px #0000;
-}
+    border-radius: 10px;
+    box-shadow: 0 30px 50px rgba(65, 50, 100, 0.08);
+   }
+
 header{
-    border-block-end: 1px solid #fff5f5;
-    padding-block-end: 30px;
+border-bottom: 1px solid #f9f7fe;
+padding-bottom: 30px;
 }
 
 .search-input {
-    background-color: #b2d430 ;
-    border: none;
-    color: #0000;
-    font-size: 16px;
-    padding: 20px;
-    inline-size: 75%;
-    border-radius: 6px;
+  background-color: #f9f7fe;
+  border: none;
+  color: rgba(30, 33, 66, 0.4);
+  font-size: 16px;
+  padding: 20px;
+  width: 75%;
+  border-radius: 6px;
 }
+
 .search-button {
-    margin-inline-start: 5px;
+    margin-left: 5px;
     font-size: 16px;
-    background-color: #49b62c;
-    color: #0000;
+    background-color: #885df1;
+    color: white;
     border: none;
     padding: 20px;
     line-height: 1;
@@ -44,44 +48,52 @@ main {
     padding: 30px 0;
 }
 
+.current-temperature {
+    font-size: 48px;
+}
+
 .current-weather {
     display: flex;
     justify-content: space-between;
 }
 
 .current-city {
-    font-size: 60px;
-    font-weight: 600;
+    font-size: 38px;
+    font-weight: 900;
     margin: 0;
 }
 
 .current-details {
-    color: #00204a;
-    font-size: 45px;
+    color: rgba(30, 33, 66, 0.4);
+    font-size: 16px;
     font-weight: 400;
-    line-height: 10px;
+    line-height: 24px;
 }
 
-.current-details-strong {
-    color: #b2d430;
+.current-details strong {
+    color: #f65282;
 }
 
-.current-temperature-icon {
+.cureent-temperature-icon {
     position: relative;
-    inset-block-start: 10px;
-    font-size:100px;
-    margin-inline-end: 10px;
+    top: -8px;
+    font-size: 40px;
+    margin-right: 10px;
 }
 
 .current-temperature-value {
-    font-size: 100px;
+    font-size: 80px;
     font-weight: bold;
 }
 
-footer {
-    border-block-start: 1px solid #fff5f5;
-    text-align: center;
-    padding-block-start: 15px;
+.current-temperature-unit {
+    font-size: 28px;
+    position: relative;
+    top: -38px;
+}
 
-    color: #00204a;
+footer {
+    border-top: 1px solid #f9f7fe;
+    text-align: center;
+    color: rgba(30, 33, 66, 0.4);
 }
