--- a/src/styles.css
+++ b/src/styles.css
@@ -1,5 +1,5 @@
 body {
-    background: #f9f7fe;
+    background: linear-gradient(to top, #e14fad 0%, #f9d423 100%);
     font-family: "Madimi One", sans-serif;
 }
   
@@ -8,7 +8,7 @@ a {
 }
 
 .weather-app {
-    background: white;
+    background: #f8f398;
     max-inline-size: 600px;
     margin: 60px auto;
     padding: 30px;
