--- a/src/styles.css
+++ b/src/styles.css
@@ -56,7 +56,7 @@ main {
 }
 
 .current-city {
-    font-size: 38px;
+    font-size: 60px;
     font-weight: 900;
     margin: 0;
 }
@@ -75,12 +75,12 @@ main {
 .cureent-temperature-icon {
     position: relative;
     inset-block-start: -8px;
-    font-size: 40px;
+    font-size: 60px;
     margin-inline-end: 10px;
 }
 
 .current-temperature-value {
-    font-size: 80px;
+    font-size: 60px;
     font-weight: bold;
 }
 
@@ -91,7 +91,8 @@ main {
 }
 
 footer {
-    border-block-start: 1px solid #f9f7fe;
+    border-block-start: 1px solid #eaef66;
     text-align: center;
     color: rgba(30, 33, 66, 0.4);
+    font-size: 16px;
 }
