--- a/src/styles.css
+++ b/src/styles.css
@@ -22,6 +22,7 @@ padding-block-end: 40px;
 }
 
 .search-input {
+    display: inline;
   background-color: #f8f7dd;
   border: none;
   color: rgba(30, 33, 66, 0.4);
