--- a/src/styles.css
+++ b/src/styles.css
@@ -18,7 +18,7 @@ a {
 
 header{
 border-block-end: 1px solid #eaef66;
-padding-block-end: 40px;
+padding-block-end: 20px;
 }
 
 .search-input {
@@ -27,7 +27,7 @@ padding-block-end: 40px;
   border: none;
   color: rgba(30, 33, 66, 0.4);
   font-size: 16px;
-  padding: 20px;
+  padding: 10px;
   inline-size: 50%;
   border-radius: 6px;
 }
@@ -36,10 +36,10 @@ padding-block-end: 40px;
     display: inline-block;
     margin-inline-start: 5px;
     font-size: 16px;
-    background-color: #885df1;
-    color: white;
+    background-color: #E359A2;
+    color: rgb(46, 42, 42);
     border: none;
-    padding: 20px;
+    padding: 15px;
     line-height: 1;
     border-radius: 5px;
 }
@@ -49,7 +49,7 @@ main {
 }
 
 .current-temperature {
-    font-size: 48px;
+    font-size: 60px;
 }
 
 .current-weather {
@@ -65,9 +65,9 @@ main {
 
 .current-details {
     color: rgba(30, 33, 66, 0.4);
-    font-size: 16px;
+    font-size: 30px;
     font-weight: 400;
-    line-height: 24px;
+    line-height: 15px;
 }
 
 .current-details strong {
@@ -87,9 +87,9 @@ main {
 }
 
 .current-temperature-unit {
-    font-size: 28px;
+    font-size: 30x;
     position: relative;
-    inset-block-start: -38px;
+    inset-block-start: -20px;
 }
 
 footer {
