--- a/src/styles.css
+++ b/src/styles.css
@@ -13,7 +13,7 @@ a {
     margin: 40px auto;
     padding: 30px;
     border-radius: 25px;
-    box-shadow: 0 30px 50px rgba(65, 50, 100, 0.08);
+    box-shadow: 0 40px 60px rgba(5, 4, 8, 0.08);
    }
 
 header{
@@ -31,6 +31,7 @@ padding-block-end: 20px;
 }
 
 .search-button {
+    display: inline-flex;
     font-size: 16px;
     background-color: #E359A2;
     color: rgb(46, 42, 42);
