--- a/src/styles.css
+++ b/src/styles.css
@@ -28,16 +28,18 @@ padding-block-end: 20px;
   font-size: 16px;
   padding: 10px;
   border-radius: 6px;
+  width: 50%;
 }
 
 .search-button {
-    display: inline-flex;
+   margin-left: 5px;
     font-size: 16px;
     background-color: #E359A2;
     color: rgb(46, 42, 42);
     border: none;
     padding: 10px;
     border-radius: 6px;
+    line-height: 1;
 }
 
 main {
