--- a/src/styles.css
+++ b/src/styles.css
@@ -42,6 +42,10 @@ padding-block-end: 20px;
     line-height: 1;
 }
 
+.search-button:hover {
+    cursor: ew-resize;
+}
+
 main {
     padding: 30px 0;
 }
