--- a/src/styles.css
+++ b/src/styles.css
@@ -18,7 +18,7 @@ a {
 
 header{
 border-block-end: 1px solid #eaef66;
-padding-block-end: 20px;
+padding-block-end: 10px;
 }
 
 .search-input {
@@ -32,7 +32,7 @@ padding-block-end: 20px;
 }
 
 .search-button {
-   margin-left: 5px;
+    margin-left: 5px;
     font-size: 16px;
     background-color: #E359A2;
     color: rgb(46, 42, 42);
@@ -43,11 +43,11 @@ padding-block-end: 20px;
 }
 
 .search-button:hover {
-    cursor: ew-resize;
+    cursor: grab;
 }
 
 main {
-    padding: 30px 0;
+    padding: 15px 0;
 }
 
 .current-temperature {
