--- a/src/styles.css
+++ b/src/styles.css
@@ -1,6 +1,6 @@
 body {
     background: linear-gradient(to top, #e14fad 0%, #f9d423 100%);
-    font-family: "Madimi One", sans-serif;
+    font-family: "Kode Mono", monospace;
 }
   
 a {
