--- a/src/styles.css
+++ b/src/styles.css
@@ -9,16 +9,16 @@ a {
 
 .weather-app {
     background: #f8f398;
-    max-inline-size: 700px;
-    margin: 40px auto;
+    max-inline-size: 600px;
+    margin: 45px auto;
     padding: 30px;
     border-radius: 25px;
     box-shadow: 0 40px 60px rgba(5, 4, 8, 0.08);
    }
 
 header{
-border-block-end: 1px solid #eaef66;
-padding-block-end: 10px;
+border: 1px solid #eaef66;
+padding: 10px;
 }
 
 .search-input {
@@ -28,7 +28,7 @@ padding-block-end: 10px;
   font-size: 16px;
   padding: 10px;
   border-radius: 6px;
-  width: 50%;
+  width: 75%;
 }
 
 .search-button {
@@ -39,7 +39,7 @@ padding-block-end: 10px;
     border: none;
     padding: 10px;
     border-radius: 6px;
-    line-height: 1;
+    padding: 15px 20px;
 }
 
 .search-button:hover {
@@ -47,7 +47,7 @@ padding-block-end: 10px;
 }
 
 main {
-    padding: 15px 0;
+    padding: 30px 0;
 }
 
 .current-temperature {
@@ -60,14 +60,16 @@ main {
 }
 
 .current-city {
-    font-size: 60px;
+    font-size: 40px;
     margin: 0;
+    line-height: 24px;
 }
 
 .current-details {
     color: rgba(30, 33, 66, 0.4);
-    font-size: 20px;
-    line-height: 40px;
+    font-size: 18px;
+    line-height: 25px;
+    font-weight: 400;
 }
 
 .current-details strong {
